--- a/style.css
+++ b/style.css
@@ -1,7 +1,22 @@
 /*
+ _____               _                     
+/__   \___ _ __ ___ | |__  _   _ ___ _   _ 
+  / /\/ _ \ '_ ` _ \| '_ \| | | / __| | | |
+ / / |  __/ | | | | | |_) | |_| \__ \ |_| |
+ \/   \___|_| |_| |_|_.__/ \__,_|___/\__,_|
+   ___      _ _                 
+  / __\___ | | | ___  __ _  ___ 
+ / /  / _ \| | |/ _ \/ _` |/ _ \
+/ /__| (_) | | |  __/ (_| |  __/
+\____/\___/|_|_|\___|\__, |\___|
+                     |___/      
+
+If you're looking at this file, you've probably got some web design chops. 
+If you're ALSO a Tembusian, please contribute by getting in touch with the people behind Treehouse!
+
 Theme Name: Treehouse
 Theme URI: http://tembusu.nus.edu.sg/treehouse
-Author: Cedric Chin
+Author: Eli James (Cedric Chin)
 Author URI: http://elijames.org
 Description: Custom theme for Tembusu's Treehouse blog.
 Version: 1.0-wpcom
@@ -12,15 +27,9 @@ Domain Path: /languages/
 Tags:
 
 This theme, like WordPress, is licensed under the GPL.
-Use it to make something cool, have fun, and share what you've learned with others.
+Treehouse is built on top of Underscores http://underscores.me/, (C) 2012-2014 Automattic, Inc.
 
- treehouse is based on Underscores http://underscores.me/, (C) 2012-2014 Automattic, Inc.
-
-Resetting and rebuilding styles have been helped along thanks to the fine work of
-Eric Meyer http://meyerweb.com/eric/tools/css/reset/index.html
-along with Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
-and Blueprint http://www.blueprintcss.org/
-*/
+ */
 
 /*--------------------------------------------------------------
 >>> TABLE OF CONTENTS:
