--- a/style.css
+++ b/style.css
@@ -53,6 +53,12 @@ a:hover { color: #669966 }
   text-transform: uppercase;
 }
 
+#navbar {
+  border-bottom: 1px solid #ddd;
+  margin-bottom: 1rem;
+}
+
+
 /* HOME PAGE STYLES
  * =====================
  */
