Single page styles complete.
- Remove comments because ugly.
- Retool post navigation
- Keep sidebar in single post view.

--- a/style.css
+++ b/style.css
@@ -68,6 +68,7 @@ a:hover { color: #669966 }
 
 .entry-summary p, .entry-meta, .entry-footer {
   font-size: 0.8rem;
+  line-height: 140%;
 }
 
 .entry-summary { margin-top: 0.8rem; }
@@ -78,6 +79,7 @@ a:hover { color: #669966 }
 }
 
 /* SIDEBAR STYLES */
+#secondary { padding-top: 1rem; }
 
 #secondary aside ul {
   font-size: 0.9rem;
@@ -104,5 +106,23 @@ a:hover { color: #669966 }
 
 #colophon {
   padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+
+/* SINGLE PAGE STYLES */
+
+.entry-meta {
+  padding-top: 1rem;
+  line-height: 160%;
+}
+
+.vcard { 
+  padding: 0;
+  border: none;
+  font-style: italic;
+}
+
+.nav-links {
+  margin-top: 2rem;
   padding-bottom: 2rem;
 }
