--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ Treehouse is built on top of Underscores http://underscores.me/, (C) 2012-2014 A
  */
 
 body { 
-  font-family: 'Andada', Georgia, serif;
+  font-family: 'PT Serif', Georgia, serif;
 }
 
 a { color: #006633 }
