--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ a:hover { color: #669966 }
 }
 
 #navbar {
-  border-bottom: 1px solid #ddd;
+  border-bottom: 2px solid #444;
   margin-bottom: 1rem;
 }
 
@@ -111,8 +111,17 @@ a:hover { color: #669966 }
 
 /* SINGLE PAGE STYLES */
 
+.single-title {
+  font: 2rem 'Andada', Georgia, serif;
+}
+
+.single-header {
+  border-bottom: 1px solid #ddd;
+  margin-bottom: 2rem;
+}
+
 .entry-meta {
-  padding-top: 1rem;
+  padding-top: 0.9rem;
   line-height: 160%;
 }
 
@@ -126,3 +135,4 @@ a:hover { color: #669966 }
   margin-top: 2rem;
   padding-bottom: 2rem;
 }
+
