--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ a:hover { color: #669966 }
 }
 
 #navbar {
-  border-bottom: 2px solid #444;
+  border-bottom: 2px solid #555;
   margin-bottom: 1rem;
 }
 
@@ -100,7 +100,7 @@ a:hover { color: #669966 }
 #footer-container { 
   width: 100%; 
   border-top: 1px solid #ddd; 
-  background-color: #ededed; 
+  background-color: #eedfc1; 
   padding-top: 2rem;
 }
 
@@ -118,6 +118,7 @@ a:hover { color: #669966 }
 .single-header {
   border-bottom: 1px solid #ddd;
   margin-bottom: 2rem;
+  padding-bottom: 1rem;
 }
 
 .entry-meta {
