--- a/style.css
+++ b/style.css
@@ -112,6 +112,9 @@ a:hover { color: #669966 }
   font: 0.6rem "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
+.green { background-color: #09402E; }
+.green:hover { background-color: #669966; }
+
 /* SIDEBAR STYLES */
 
 #secondary aside ul {
@@ -119,7 +122,7 @@ a:hover { color: #669966 }
 }
 
 .widget-title {
-  font-size: 1.2rem;
+  font: 1rem "Helvetica-Neue", Helvetica, Arial, sans-serif;
 }
 
 .textwidget {
@@ -127,6 +130,18 @@ a:hover { color: #669966 }
   line-height: 140%;
   margin-bottom: 1rem;
 }
+
+.widget ul {
+  list-style: none;
+  margin-left: 0;
+}
+
+.widget ul li {
+  border-bottom: 1px solid #eee;
+  margin-bottom: 3px;
+}
+
+.widget li a { display: block; }
 
 /* FOOTER STYLES */
 
