--- a/style.css
+++ b/style.css
@@ -51,6 +51,8 @@ a:hover { color: #669966 }
 
 .masthead {
   text-transform: uppercase;
+  border-bottom: 1px solid #555;
+  margin-bottom: 1rem;
 }
 
 .masthead img {
@@ -67,21 +69,40 @@ a:hover { color: #669966 }
 }
 
 #navbar {
+  display: inline-block;
   text-transform: uppercase;
-  border-bottom: 1px solid #555;
-  margin-bottom: 1rem;
+}
+
+@media only screen {
+  #navbar { 
+    text-align: left;
+    margin-top: 0rem;
+  }
+}
+
+@media only screen and (min-width: 40.063em) {
+  #navbar { 
+    text-align: left;
+    margin-top: 0rem;
+  }
+}
+
+@media only screen and (min-width: 64.063em) {
+  #navbar {
+    text-align: right;
+    margin-top: 2.5rem;
+  }
 }
 
 #navbar ul.nav-list {
   letter-spacing: -1px;
-  margin: 0 auto 0.5rem auto;
+  margin: 0 0 0.5rem 0;
   list-style: none;
-  text-align: center;
 }
 
 #navbar ul.nav-list li {
   display: inline-block;
-  margin-left: 10px;
+  margin-right: 10px;
 }
 
 #navbar a { padding: 10px }
@@ -147,6 +168,7 @@ a:hover { color: #669966 }
 
 #footer-container { 
   width: 100%; 
+  font-size: 0.9rem;
   border-bottom: 10px solid #3a2c10; 
   background-color: #eedfc1; 
   padding-top: 2rem;
@@ -159,10 +181,12 @@ a:hover { color: #669966 }
 
 #footer-container ul {
   list-style: none;
+  font-size: 0.9rem;
   margin-left: 0;
 }
 
 .footer-heading {
+  font-size: 1.2rem;
   margin-bottom: 1rem;
 }
 
