--- a/style.css
+++ b/style.css
@@ -1,18 +1,4 @@
 /*
- _____               _                     
-/__   \___ _ __ ___ | |__  _   _ ___ _   _ 
-  / /\/ _ \ '_ ` _ \| '_ \| | | / __| | | |
- / / |  __/ | | | | | |_) | |_| \__ \ |_| |
- \/   \___|_| |_| |_|_.__/ \__,_|___/\__,_|
-   ___      _ _                 
-  / __\___ | | | ___  __ _  ___ 
- / /  / _ \| | |/ _ \/ _` |/ _ \
-/ /__| (_) | | |  __/ (_| |  __/
-\____/\___/|_|_|\___|\__, |\___|
-                     |___/      
-
-If you're looking at this file, you've probably got some web design chops. 
-If you're ALSO a Tembusian, please contribute by getting in touch with the people behind Treehouse!
 
 Theme Name: Treehouse
 Theme URI: http://tembusu.nus.edu.sg/treehouse
@@ -62,7 +48,7 @@ a:hover { color: #669966 }
 
 .wordmark {
   display: inline;
-  font: 2.5rem 'Andada', Georgia, serif;
+  font: 220% 'Andada', Georgia, serif;
   letter-spacing: -1px;
   font-weight: bold;
   vertical-align: middle;
