Fix search bar and sidebar top margin.

--- a/style.css
+++ b/style.css
@@ -134,6 +134,9 @@ a:hover { color: #669966 }
 }
 
 /* SIDEBAR STYLES */
+.top-offset {
+  margin-top: 1.1rem;
+}
 
 #secondary aside ul {
   font-size: 0.9rem;
@@ -160,6 +163,24 @@ a:hover { color: #669966 }
 }
 
 .widget li a { display: block; }
+
+input.search-field { 
+  display: inline-block;
+  vertical-align: top;
+}
+
+@media only screen and (min-width: 64.063em) { 
+  input.search-field { 
+    width: 60%;
+  }
+}
+
+input.search-submit {
+  width: 20%;
+  text-indent: -5px;
+  height: 36px;
+  vertical-align: bottom;
+}
 
 /* FOOTER STYLES */
 
