--- a/style.css
+++ b/style.css
@@ -121,6 +121,17 @@ a:hover { color: #669966 }
 .green { background-color: #09402E; }
 .green:hover { background-color: #669966; }
 
+.orbit-container { margin-bottom: 1rem; }
+
+.orbit-bullets-container { display: none; }
+
+a.slider-text {
+  font-size: 1.5rem;
+  color: #eee;
+}
+
+a.slider-text:hover { text-decoration: underline; }
+
 /* PAGE NAVIGATION STYLES */
 .nav-next { 
   display: inline-block; 
