--- a/style.css
+++ b/style.css
@@ -151,6 +151,14 @@ a.slider-text:hover { text-decoration: underline; }
   margin-top: 1.1rem;
 }
 
+@media only screen and (max-width: 64.063em) {
+  #secondary {
+    margin-top: 1.1rem;
+    border-top: 1px solid #ccc;
+    padding-top: 1rem;
+  }
+}
+
 #secondary aside ul {
   font-size: 0.9rem;
 }
