--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@ a:hover { color: #669966 }
   text-transform: uppercase;
   border-bottom: 1px solid #555;
   margin-bottom: 1rem;
+  height: 6rem;
 }
 
 .masthead img {
@@ -168,7 +169,7 @@ a.slider-text:hover { text-decoration: underline; }
 }
 
 .widget-title {
-  font: 1rem "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 1rem;
 }
 
 .textwidget {
