--- a/style.css
+++ b/style.css
@@ -1,4 +1,11 @@
 /*
+Mandatory limerick:
+
+A bather whose clothing was strewed
+By winds that left her quite nude
+Saw a man come along
+And unless we are wrong
+You expected this line to be lewd.
 
 Theme Name: Treehouse
 Theme URI: http://tembusu.nus.edu.sg/treehouse
